--- a/gramApp/templates/app/feed.html
+++ b/gramApp/templates/app/feed.html
@@ -16,7 +16,7 @@
         <div class="info">
             <div class="user">
                 <div class="profile-pic"><img src="{{ image.author.profile.image.url  }}" alt=""></div>
-                <a href="{% url 'profile' user.profile.pk %}" style="text-decoration: none">
+                <a href="{% url 'profile' image.author.profile.pk %}" style="text-decoration: none">
                 <p class="username">{{image.author}}</p></a>
             </div>
             <!-- <img src="{{image.image.url}}" class="img-responsive" alt="..."  style="width:100%; height:100%;" > -->
@@ -46,7 +46,7 @@
                 <img src="{% static 'assets/save.PNG' %}" class="save icon" alt="">
             </div>
             <p class="likes">{{ image.likes.all.count }} likes</p>
-            <p class="description"><span><a href="{% url 'profile' user.profile.pk %}" style="text-decoration: none; color:black"> {{image.author}} </a> </span> {{image.caption}}</p>
+            <p class="description"><span><a href="{% url 'profile' image.author.profile.pk %}" style="text-decoration: none; color:black"> {{image.author}} </a> </span> {{image.caption}}</p>
             <small class="text-muted">{{image.uploadDate|timesince}}</small>
             </br>
             {% if count %}
