--- a/gramApp/templates/app/ImgDetail.html
+++ b/gramApp/templates/app/ImgDetail.html
@@ -12,7 +12,9 @@
                 <div class="info">
                     <div class="user">
                         <div class="profile-pic"><img src="{{ image.author.profile.image.url  }}" alt=""></div>
-                        <p class="username">{{image.author}}</p>
+                        <p class="username" >
+                            <a href="{% url 'profile' image.author.profile.pk %}" style="color: #000; text-decoration: none;"> {{image.author}}</a>
+                        </p>
                     </div>
                     <!-- <img src="{{image.image.url}}" class="img-responsive" alt="..."  style="width:100%; height:100%;" > -->
                     <img src="{% static 'assets/option.PNG' %}" class="options" alt="">
@@ -23,13 +25,15 @@
     </div>
     <!--COMMENTS-->
     <div class="col-4 pt-5 mb-5">
-      <strong style="font-size: 16px;"> {{image.author}} </strong>
+      <strong style="font-size: 16px;"> 
+        <a href="{% url 'profile' image.author.profile.pk %}" style="color: #000; text-decoration: none;"> {{image.author}} 
+        </a></strong>
 
         <div>
             {% for comment in comments %}
             <div class=" mt-3 mb-5">
                     <p>
-                        <strong><a href="{% url 'profile' user.profile.pk %}" style="text-decoration: none; color: #000;">{{ comment.author }} </a></strong> <text>{{ comment.comment }}</text></br><small class="text-muted">{{ comment.createDate|timesince }} ago </small>
+                        <strong><a href="{% url 'profile' comment.author.profile.pk %}" style="text-decoration: none; color: #000;">{{ comment.author }} </a></strong> <text>{{ comment.comment }}</text></br><small class="text-muted">{{ comment.createDate|timesince }} ago </small>
                     </p>
             </div>
             {% endfor %}
