--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -48,7 +48,7 @@
             <ul>
                 <li><span class="profile-stat-count">{{images|length}}</span> posts</li>
                 <li><span class="profile-stat-count">{{getFollowers}}</span> followers</li>
-                <li><span class="profile-stat-count">0</span> following</li>
+                <li><span class="profile-stat-count">{{getFollowing}}</span> following</li>
             </ul>
         </br>
 
