--- a/gramApp/templates/app/base.html
+++ b/gramApp/templates/app/base.html
@@ -26,7 +26,13 @@
         <nav class="navbar">
             <div class="nav-wrapper" >
               <img src="{% static 'assets/logo.PNG' %}" class="brand-img" alt="" href="{% url 'feed' %}">
-                <input type="text" class="search-box" placeholder="search">
+                
+              
+              <form class="navbar-form" role="search" action="{% url 'search' %}" class="search-box">
+                <div class="input-group">
+                  <input type="text"  placeholder="Search username..." name="search_user">                 
+                </div>
+                </form>
                 <div class="nav-items">
                     <a href="{% url 'feed' %}" style="text-decoration:none;">
                         <img src="{% static 'assets/home.PNG' %}" class="icon" alt="">
@@ -42,6 +48,13 @@
                             <img src="{{ user.profile.image.url  }}" class="">
                         </div>
                     </a>
+                    <a href="/logout"><i style="margin-right: 20px;font-size: 20px;color: black">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+                        <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                      </svg>
+                    </a>
+
                 </div>
             </div>
             </nav>
