Updating search results template

--- a/users/templates/users/search.html
+++ b/users/templates/users/search.html
@@ -9,7 +9,9 @@
             {% if results %}
             <h4 class="text-center">Found {{ results|length }} user{{ results|pluralize }}</h4>
             {% else %}
-            <h4 class="text-center"> Found 0 user with username <strong></strong></h4>
+            <div class="col-md-12 mb-4 mt-4 pt-3 pb-4" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
+                <h4 class="text-center"> Found 0 user with username <strong></strong></h4>
+            </div>
 
             
             {% endif %}
@@ -18,11 +20,10 @@
             {% for user_profile in results %}
 
                 <div class="row">
-                    <div class="col-md-3">
-                        <img src="{{user_profile.user.profile.profile_photo.url}}" alt=""
-                             class="rounded-circle border ml-3 mt-2  mr-3" width="55" height="55">
-                    
-                        <span><strong><a href="">{{user_profile.user.username}}</a></strong></span><br>
+                    <div class="col-md-12 mb-4 mt-4 pt-3 pb-4" style="box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;">
+                        <img src="{{user_profile.user.profile.image.url}}" alt=""
+                             class="rounded-circle border ml-3 mt-2  mr-3" width="95" height="95">
+                    <strong><a href="{% url 'profile' user_profile.pk %}" style="text-decoration:none; color:black; font-weight:bold;">{{user_profile.user.username}}</a></strong><br>
                 </div>
             {% endfor %}
             {% endif %}
