Adding explore page, it's views, and url

--- a/gramApp/templates/app/base.html
+++ b/gramApp/templates/app/base.html
@@ -41,7 +41,9 @@
                     <a href="{% url 'image-create' %}" style="text-decoration: none;">
                         <img src="{% static 'assets/add.PNG' %}" class="icon" alt="">
                     </a>
+                    <a href="{% url 'explore' %}" style="text-decoration:none;">
                     <img src="{% static 'assets/explore.PNG' %}" class="icon" alt="">
+                  </a>
                     <img src="{% static 'assets/like.PNG' %}" class="icon" alt="">
                     <a href="{% url 'profile' user.profile.pk %}" style="text-decoration: none">
                         <div class="icon user-profile">
