--- a/gramApp/templates/app/explore.html
+++ b/gramApp/templates/app/explore.html
@@ -1,24 +1,43 @@
 {% extends "app/base.html" %}
 {% load static %}
 {% block content %}
+<link rel="stylesheet" type="text/css" href="{% static 'gram/profile.css' %}">
 
-<div class="album py-5 bg-light">
-    <div class="container">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        {% for image in images %}
-
-        <div class="col-4 mb-3" >
-          <div class="card shadow-sm showHover">
-            <a href="{% url 'postDetail' image.id %}" style="text-decoration: none;">
-              <img src="{{image.image.url}}" class="img-responsive" alt="..."  style="width:100%; height:100%;" >
-            </a>
-          </div>
+<div class="container mt-5 pt-5">
+  <div class="gallery">
+    {% for image in images %}
+        <div class="gallery-item" tabindex="0">
+            <a href="{% url 'postDetail' image.id %}" style="color:white; text-decoration: none;">
+                <img src="{{image.image.url}}" class="gallery-image" alt="">
+            <div class="gallery-item-type">
+                <span class="visually-hidden">Gallery</span><i class="fas fa-clone" aria-hidden="true"></i>
+            </div>
+            <div class="gallery-item-info">
+                <ul>
+                    <li class="gallery-item-likes"><span class="visually-hidden"></span><i class="fas fa-heart" aria-hidden="true">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                          </svg>
+                    </i> {{ image.likes.all.count }}</li>
+                    <li class="gallery-item-comments"><span class="visually-hidden"></span><i class="fas fa-comment" aria-hidden="true">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+                            <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+                          </svg>
+                    </i>0</li>
+                </ul>
+            </div>
+        </a>
         </div>
         {% endfor %}
     </div>
-    </div>
-    </div>
-    
+</div>
 
 {% endblock content %}
+
+
+
+
+
+  
+
