Fixing comments size

--- a/gramApp/templates/app/explore.html
+++ b/gramApp/templates/app/explore.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'gram/profile.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'gram/main.css' %}">
 
 
 <div class="container mt-5 pt-5">
