--- a/gramApp/static/gram/main.css
+++ b/gramApp/static/gram/main.css
@@ -30,6 +30,7 @@ body{
     display: flex;
     justify-content: center;
     padding: 5px 0;
+    overflow: hidden;
 }
 
 .nav-wrapper{
@@ -39,6 +40,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .brand-img{
