--- a/gramApp/templates/app/ImgDetail.html
+++ b/gramApp/templates/app/ImgDetail.html
@@ -32,8 +32,9 @@
         <div>
             {% for comment in comments %}
             <div class=" mt-3 mb-5">
+                <small class="text-center" style="font-size: 10px;text-align: center;"> Top Comments</small>
                     <p>
-                        <strong><a href="{% url 'profile' comment.author.profile.pk %}" style="text-decoration: none; color: #000;">{{ comment.author }} </a></strong> <text>{{ comment.comment }}</text></br><small class="text-muted">{{ comment.createDate|timesince }} ago </small>
+                        <strong><a href="{% url 'profile' comment.author.profile.pk %}" style="text-decoration: none; color: #000;font-size: 10px;">{{ comment.author }} </a></strong> <small style="font-size:10px">{{ comment.comment }}</small></br><small class="text-muted" style="font-size:8px">{{ comment.createDate|timesince }} ago </small>
                     </p>
             </div>
             {% endfor %}
