--- a/gramApp/templates/app/updateImage.html
+++ b/gramApp/templates/app/updateImage.html
@@ -18,7 +18,7 @@
 
     </div>
     <div class="btnWrapper pb-5 pt-4">
-        <button class="form-btn center" type="submit" style="width: 30%; height:30px; border-radius: 35px;">UPDATE</button>
+        <button class="form-btn center" type="submit" style="width: 30%; height:30px; border-radius: 35px;">save</button>
     </div>
 </form>
 
